--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-nav,
-.nav-link {
+nav, .nav-link {
     display: flex;
 }
 
@@ -51,6 +50,32 @@ li a {
     margin-left: 3rem;
 }
 
+.search-bar{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 1rem;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+.search-bar button{
+    padding: 10px;
+    width: 2.5cm;
+    background: #004b8d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.search-bar .middile input[type="text"] {
+    width: 15cm;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+
 .banner{
     justify-content: space-around;
     margin-top: 1rem;
@@ -62,11 +87,7 @@ li a {
 h1, p {
     margin-left: 10px; /* Adds some left margin for spacing */
 }
-.banner-text{
-    background-color: #004b8d;
-    color: white;
-    opacity: 60%;
-}
+
 
 .login-box {
     width: 350px;
@@ -86,19 +107,22 @@ h1, p {
 
 }
 
-label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 5px;
-}
-
-h2 {
+h3, h2{
     text-align: center;
-    margin-bottom: 10px;
+    
+}
+h2{
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+h3{
+    font-weight:100;
+    font-size: 21px;
+    color: grey;
+    margin-bottom: 8px;
 }
 
-input[type="text"],
-input[type="password"] {
+.login-box input[type="text"], input[type="password"] {
     width: 95%;
     padding: 10px;
     margin-bottom: 10px;
@@ -106,8 +130,7 @@ input[type="password"] {
     border-radius: 5px;
 }
 
-button {
-
+.login-box button {
     width: 100%;
     padding: 10px;
     background: #004b8d;
@@ -118,12 +141,9 @@ button {
     font-weight: bold;
 }
 
-.checkbox-container {
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
+.login-box .knowmore{
+    text-align: center;
+    margin-top: 2cm;
+    font-weight: normal;
 }
 
-input[type="checkbox"] {
-    margin-right: 5px;
-}
