--- a/style.css
+++ b/style.css
@@ -90,11 +90,12 @@ h1, p {
 
 
 .login-box {
-    width: 350px;
+    width: 300px;
     /* Set width */
     height: 350px;
     /* Set height equal to width */
-    padding: 20px;
+    padding: 25px;
+    padding-right: 10px;
     background: white;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -122,16 +123,58 @@ h3{
     margin-bottom: 8px;
 }
 
-.login-box input[type="text"], input[type="password"] {
+select {
+    align-items: center;
+    margin-bottom: 20px;
     width: 95%;
-    padding: 10px;
-    margin-bottom: 10px;
+    padding: 8px;
+    font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: #fff;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+    
 }
 
-.login-box button {
-    width: 100%;
+.dropdown-container {
+    position: relative;
+}
+.dropdown-container select {
+    display: block;
+}
+
+select:focus {
+    border-color: #007bff;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+select option {
+    padding: 10px;
+    background-color: white;
+}
+select option:hover {
+    background-color: #f1f1f1;
+}
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+.login-box .apply-online {
+    width: 95.3%;
     padding: 10px;
     background: #004b8d;
     color: white;
@@ -145,5 +188,6 @@ h3{
     text-align: center;
     margin-top: 2cm;
     font-weight: normal;
+    font-size: medium;
 }
 
