--- a/style.css
+++ b/style.css
@@ -24,12 +24,15 @@ nav {
     font-size: 2rem;
     background: #004b8d;
     color: white;
+    font-weight: bold;
 }
 
 .nav-link {
     gap: 2rem;
     list-style: none;
     font-size: 1.2rem;
+    font-weight: normal;
+
 }
 
 li a {
