--- a/style.css
+++ b/style.css
@@ -45,13 +45,7 @@ li a {
 
 
 
-.topsection {
-    display: flex;
-    justify-content: space-evenly;
-    gap: 2rem;
-    margin-top: 5rem;
-    margin-left: 3rem;
-}
+
 
 .search-bar{
     display: flex;
@@ -77,15 +71,26 @@ li a {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-
+.topsection {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2rem;
+    margin-top: 1.5rem;
+    margin-left: 3rem;
+}
 
 .banner{
     justify-content: space-around;
     margin-top: 1rem;
     border: 2px solid black;
-    padding: 10px;
     width: 65%;  
-    
+    overflow: hidden;  
+}
+
+.banner .img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 h1, p {
     margin-left: 10px; /* Adds some left margin for spacing */
@@ -111,17 +116,18 @@ h1, p {
 
 }
 
-h3, h2{
+p, h2{
     text-align: center;
     
 }
 h2{
-    font-size: 18px;
+    font-size: 19px;
     margin-bottom: 15px;
+    font-weight: normal;
 }
-h3{
+p{
     font-weight:100;
-    font-size: 21px;
+    font-size: 22px;
     color: grey;
     margin-bottom: 8px;
 }
@@ -194,3 +200,17 @@ select option:hover {
     font-size: medium;
 }
 
+.footer{
+    display: flex;
+    justify-content: center;
+    background-color: #004b8d;
+    height: 10rem;
+    color: white;
+    text-align: center;
+    align-items: flex-end;
+    margin-top: 5rem;
+}
+
+.footer-pg{
+    color: white;
+}
